# pde-quad

./: .gitignore  LICENSE  README.md  pyproject.toml  qupde_usage_examples.ipynb  requirements.txt
algorithm/: .gitignore  FractionDecomp.py  PolySys.c  PolySys.py  RatSys.py  alg_example1.py  alg_example2.py  algorithm_v0.py  algorithm_v1.py  branch_and_bound.c  branch_and_bound.py  check_manual_quad.py  check_quad.py  check_quad_examples.py  check_quad_matrix.py  check_quad_sparse.py  fractions.py  main.py  nearest_neighbor.c  nearest_neighbor.py  nearest_neighbor.pyx  polynomialization.py  quadratization.c  quadratization.py  quadratization_copy.py  quadratization_examples.py  quadratization_gauss.py  quadratization_sparse.py  quadratize.py  quadratize_nearest_neighbor.py  setup.py  tests_alg_1.py  utils.py  var_selection.py
deprecated/: check_quad_examples.py  check_quad_gauss.py  check_quad_matrix.py  check_quad_test.py  examples_quad_test.py  examples_test.py  frac_examples_quad_test.py  frac_examples_test.py  fractions.py  fractions_test.py  quadratization.py  quadratization_gauss.py  quadratization_matrix.py  quadratize_test.py  utils.py
examples/: Batch_chromatography.py  Dym_example.py  KDV.py  allen_cahn_equation.py  batch_chromatography_no_c.py  blow-up_equation.py  brusselator_system.py  cahn_hilliard_equation.py  compacton_equations.py  dym_equation.py  euler_equations.py  example1.py  example2.py  example3.py  example4.py  example6.py  fitz-hugh-nagamo-mod.py  fitz-hugh-nagamo.py  gray_scott_equations.py  isentropic_gas.py  nonlinear_heat_equation.py  (+15 more)
(+31 files in other folders)
